# praz

./: DESIGN.md  PROTOCOL_DOCS.md  new-template.cabal  praz.cabal
app/: Main.hs
scripts/: DepScrape.hs
src/: Lib.hs
src/Network/Tor/: Config.hs  Daemon.hs  Utils.hs
test-data/: torrc
test/unit/: ConfigSpec.hs
