name:                praz
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/danoctavian/praz
license:             BSD3
license-file:        LICENSE
author:              Dan Octavian
maintainer:          danoctavian91@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Network.Tor.Config
    , Network.Tor.Daemon
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec 
                     , array
  default-language:    Haskell2010

executable praz-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , praz
  default-language:    Haskell2010

Test-Suite unit 
    Main-Is:         Spec.hs
    Other-modules:
      ConfigSpec
    Hs-Source-Dirs:  test/unit
    Type:            exitcode-stdio-1.0
       --balls to the 
    Ghc-Options:     -Wall -threaded -rtsopts -with-rtsopts=-N
    Build-Depends:   base >= 4.7 && < 5  
                   , hspec
                   , praz

source-repository head
  type:     git
  location: https://github.com/name/project
